# vindicta-foundation

./: .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  Justfile  README.md  ROADMAP.md  index.html  mkdocs.yml  pyproject.toml  ruff.txt  sitemap.xml  test_results.txt
.agent/workflows/: commit.md  pr.md  speckit-analyze.md  speckit-checklist.md  speckit-clarify.md  speckit-constitution.md  speckit-implement.md  speckit-plan.md  speckit-specify.md  speckit-tasks.md  speckit-taskstoissues.md
.devcontainer/: devcontainer.json
.gemini/: GEMINI.md
.gemini/commands/: speckit.specify.toml  speckit.tasks.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
.specify/memory/: constitution.md
.specify/templates/: constitution-template.md
api/cli/: index.html
api/rest/: index.html
architecture/: index.html
architecture/C4-Target-State/: index.html
architecture/adr/000-template/: index.html
architecture/adr/0001-c4-architecture-model/: index.html
architecture/agents/: index.html
architecture/c4-model/: index.html
architecture/cost-model/: index.html
architecture/evolution/: index.html
architecture/inference-layer/: index.html
architecture/modules/: index.html
architecture/overview/: index.html
architecture/primordia/: index.html
concepts/warscribe/: index.html
concepts/warscribe-whitepaper/: index.html
constitution/: index.html
docs/: constitution.md  index.md
docs/api/: cli.md  rest.md
docs/architecture/: ADR-001-Consolidation.md  C4-Target-State.md  agents.md  c4-model.md  cost-model.md  evolution.md  index.md  inference-layer.md  modules.md  overview.md  primordia.md
docs/concepts/: warscribe-whitepaper.md  warscribe.md
docs/features/: ai-predictions.md  army-management.md  match-tracking.md  meta-analysis.md
docs/getting-started/: first-match.md  installation.md  quickstart.md
features/: dx.feature
features/ai-predictions/: index.html
features/army-management/: index.html
features/match-tracking/: index.html
features/meta-analysis/: index.html
features/steps/: dx_steps.py
getting-started/first-match/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
search/: search_index.json
tests/: test_models.py
(+35 files in other folders)
