[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vindicta-foundation"
version = "0.1.0"
description = "Axiomatic core models and architecture for the Vindicta Platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.10.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "behave>=1.2.6",
    "pre-commit",
    "pytest-xdist",
    "pytest-sugar",
    "pytest-mock",
    "mkdocs-macros-plugin",
    "mike",
    "towncrier",
]

[tool.hatch.build.targets.wheel]
packages = ["src/vindicta_foundation"]

[tool.mypy]
strict = true
python_version = "3.12"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "--cov=vindicta_foundation --cov-report=term-missing"
